Add classes to inputs

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </li>
     </ul>
     <form action="#">
-      <input type="text" placeholder="Title" />
-      <input type="text" placeholder="Author" />
+      <input type="text" placeholder="Title" class="title" />
+      <input type="text" placeholder="Author" class="author" />
       <button type="submit">Add</button>
     </form>
   </body>
