Display book collection on the page

--- a/index.html
+++ b/index.html
@@ -9,17 +9,8 @@
   </head>
   <body>
     <h1>Awesome books</h1>
-    <ul>
-      <li>
-        <p>Lorem, ipsum.</p>
-        <p>Testero Testyy.</p>
-        <button>Remove</button>
-      </li>
-      <li>
-        <p>Second book.</p>
-        <p>Testero Testyy.</p>
-        <button>Remove</button>
-      </li>
+    <ul class="book-list">
+      <!-- Add books -->
     </ul>
     <form action="#">
       <input type="text" placeholder="Title" class="title" />
