Style awesome books page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <script defer src="./js/script.js"></script>
   </head>
   <body>
-    <h1>Awesome books</h1>
+    <h1>All Awesome Books</h1>
     <ul class="book-list">
       <!-- Add books -->
     </ul>
+    <hr />
+    <h2>Add a new book</h2>
     <form action="#">
       <input type="text" placeholder="Title" class="title" />
       <input type="text" placeholder="Author" class="author" />
