--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awesome Books</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <script type="module" defer src="./js/index.js"></script>
+    <script type="module" defer src="js/index.js"></script>
   </head>
   <body>
     <header>
